ho applicato le media query alla sidebar nel range degli 801-1330px

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             <div class="icon">
               <i class="fas fa-home"></i>
             </div>
-            Home
+            <span>Home</span>
           </li>
           <li class="menu-item">
             <div class="icon">
               <i class="far fa-compass"></i>
             </div>
-            Esplora
+            <span>Esplora</span>
           </li>
           <li class="menu-item">
             <div class="icon">
               <i class="fab fa-youtube"></i>
             </div>
-            Iscrizioni
+            <span>Iscrizioni</span>
           </li>
         </ul>
       </div>
@@ -43,9 +43,9 @@
         <ul class="widget__menu">
           <li class="menu-item">
             <div class="icon">
-              <i class="fas fa-home"></i>
+              <i class="fas fa-play"></i>
             </div>
-            Raccolta
+            <span>Raccolta</span>
           </li>
           <li class="menu-item">
             <div class="icon">
