migliorato il comportamento responsive sotto i 1140px diminuendo progressivamente le colonne.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
@@ -94,6 +97,90 @@
       </ul>
       <div class="play-list-wrapper">
         <ul class="play-list" >
+          <li class="play-list-item">
+            <div class="card-header">
+              <img src="https://picsum.photos/350/200" alt="" width="350">
+            </div>
+            <div class="card-body">
+              <img src="https://picsum.photos/30/30" alt="">
+              <div class="info">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="play-list-item">
+            <div class="card-header">
+              <img src="https://picsum.photos/350/200" alt="" width="350">
+            </div>
+            <div class="card-body">
+              <img src="https://picsum.photos/30/30" alt="">
+              <div class="info">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="play-list-item">
+            <div class="card-header">
+              <img src="https://picsum.photos/350/200" alt="" width="350">
+            </div>
+            <div class="card-body">
+              <img src="https://picsum.photos/30/30" alt="">
+              <div class="info">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="play-list-item">
+            <div class="card-header">
+              <img src="https://picsum.photos/350/200" alt="" width="350">
+            </div>
+            <div class="card-body">
+              <img src="https://picsum.photos/30/30" alt="">
+              <div class="info">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="play-list-item">
+            <div class="card-header">
+              <img src="https://picsum.photos/350/200" alt="" width="350">
+            </div>
+            <div class="card-body">
+              <img src="https://picsum.photos/30/30" alt="">
+              <div class="info">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="play-list-item">
+            <div class="card-header">
+              <img src="https://picsum.photos/350/200" alt="" width="350">
+            </div>
+            <div class="card-body">
+              <img src="https://picsum.photos/30/30" alt="">
+              <div class="info">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </li>
+
           <li class="play-list-item">
             <div class="card-header">
               <img src="https://picsum.photos/350/200" alt="" width="350">
