--- a/index.html
+++ b/index.html
@@ -12,7 +12,44 @@
   <title>Document</title>
 </head>
 <body>
+  
   <header>
+
+    <div class="menu-home">
+      <div class="header-menu">
+        <i class="fas fa-bars"></i>
+      </div>
+      <div class="header-logo">
+        <img src="img/youtube-logo-png-10563.png">
+      </div>
+    </div>
+
+    <div class="input">
+      <div class="search-bar">
+        <input type="text" placeholder="Cerca">
+      </div>
+      <div class="search-button">
+        <a href=""><i class="fas fa-search"></i></a>
+      </div>
+      <div class="mic">
+        <i class="fas fa-microphone"></i>
+      </div>
+    </div>
+
+    <ul class="actions">
+      <li class=" act new-content">
+        <a href=""><i class="fas fa-video"></i></a>
+      </li>
+      <li class="act app">
+        <a href=""><i class="fas fa-th"></i></a>
+      </li>
+      <li class="act notification">
+        <a href=""><i class="far fa-bell"></i></a>
+      </li>
+      <li class="act profile">
+        <img class="profile-image" src="https://picsum.photos/50/50" alt="">
+      </li>
+    </ul>
 
   </header>
 
