Ho aggiunto le parti mancanti alla barra laterale

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+
   <header>
 
     <div class="menu-home">
@@ -56,6 +56,8 @@
   <main>
 
     <aside class="side-bar">
+
+      <!-- HOME   -->
       <div class="widget">
         <ul class="widget__menu">
           <li class="menu-item active">
@@ -79,6 +81,7 @@
         </ul>
       </div>
 
+      <!-- RACCOLTA   -->
       <div class="widget">
         <ul class="widget__menu">
           <li class="menu-item">
@@ -109,6 +112,7 @@
 
       </div>
 
+      <!-- ISCRIZIONI  -->
       <div class="widget">
         <h3 class="widget__title">Iscrizioni</h3>
         <ul>
@@ -116,11 +120,124 @@
             <div class="icon">
               <img class="profile-image" src="https://picsum.photos/50/50" alt="">
             </div>
-            Guarda più tardi
+            <span>Guarda più tardi</span>
+            <div class="point">
+              <i class="fas fa-circle"></i>
+            </div>
+          </li>
+        </ul>
+        <ul>
+          <li class="menu-item">
+            <div class="icon">
+              <img class="profile-image" src="https://picsum.photos/50/50" alt="">
+            </div>
+            <span>Guarda più tardi</span>
+            <div class="point">
+              <i class="fas fa-circle"></i>
+            </div>
+          </li>
+        </ul>
+        <ul>
+          <li class="menu-item">
+            <div class="icon">
+              <img class="profile-image" src="https://picsum.photos/50/50" alt="">
+            </div>
+            <span>Guarda più tardi</span>
+            <div class="point">
+              <i class="fas fa-circle"></i>
+            </div>
+          </li>
+        </ul>
+        <ul>
+          <li class="menu-item">
+            <div class="icon">
+              <img class="profile-image" src="https://picsum.photos/50/50" alt="">
+            </div>
+            <span>Guarda più tardi</span>
+            <div class="point">
+              <i class="fas fa-circle"></i>
+            </div>
+          </li>
+        </ul>
+        <ul>
+          <li class="menu-item">
+            <div class="icon">
+              <img class="profile-image" src="https://picsum.photos/50/50" alt="">
+            </div>
+            <span>Guarda più tardi</span>
+            <div class="point">
+              <i class="fas fa-circle"></i>
+            </div>
+          </li>
+        </ul>
+        <ul>
+          <li class="menu-item">
+            <div class="icon">
+              <img class="profile-image" src="https://picsum.photos/50/50" alt="">
+            </div>
+            <span>Guarda più tardi</span>
+            <div class="point">
+              <i class="fas fa-circle"></i>
+            </div>
+          </li>
+        </ul>
+        <ul>
+          <li class="menu-item">
+            <div class="icon chevron">
+              <a href=""><i class="fas fa-chevron-down"></i></a>
+            </div>
+            <span>Mostra altri 50</span>
+          </li>
+        </ul>
+        
+        
+
+      </div>
+
+      <!-- ALTRO DA YOUTUBE  -->
+      <div class="widget">
+        <h3 class="widget__title">altro da youtube</h3>
+        <ul class="widget__menu">
+          <li class="menu-item">
+            <div class="icon">
+              <i class="fab fa-youtube"></i>
+            </div>
+            <span>YouTube Premium</span>
+          </li>
+          <li class="menu-item">
+            <div class="icon">
+              <i class="fas fa-film"></i>
+            </div>
+            <span>Film</span>
+          </li>
+          <li class="menu-item">
+            <div class="icon">
+              <i class="fas fa-gamepad"></i>
+            </div>
+            <span>giochi</span>
+          </li>
+          <li class="menu-item">
+            <div class="icon">
+              <i class="fas fa-wifi"></i>
+            </div>
+            <span>Dal vivo</span>
+          </li>
+          <li class="menu-item">
+            <div class="icon">
+              <i class="fas fa-user-tie"></i>
+            </div>
+            <span>Moda e bellezza</span>
+          </li>
+          <li class="menu-item">
+            <div class="icon">
+              <i class="fas fa-trophy"></i>
+            </div>
+            <span>Sport</span>
           </li>
         </ul>
 
       </div>
+
     </aside>
 
     <section class="main-container">
@@ -130,7 +247,12 @@
         <li>Musica</li>
         <li>Matematica</li>
         <li>Cartoni animati</li>
-        <li>Videogiochi</li>
+        <li>Videogiochi per piattaforme</li>
+        <li>Sitcom</li>
+        <li>Arti visive</li>
+        <li>Calcio</li>
+        <li>Dal vivo</li>
+        <li>Tecnologia</li>
       </ul>
       <div class="play-list-wrapper">
         <ul class="play-list" >
