ho sistemato la parte principale con le card

--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
     </aside>
 
     <section class="main-container">
+
+      <!-- Categorie, parte alta di .main-container  -->
       <ul class="categories">
         <li>Tutti</li>
         <li>Mix</li>
@@ -254,148 +256,178 @@
         <li>Dal vivo</li>
         <li>Tecnologia</li>
       </ul>
+
+      <!-- Container che raggruppa tutte le card dei video youtube (img di anteprima, nome canale e visualizzazioni ) -->
       <div class="play-list-wrapper">
+
         <ul class="play-list" >
-          <li class="play-list-item">
-            <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
-            </div>
-            <div class="card-body">
-              <img src="https://picsum.photos/30/30" alt="">
-              <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-              </div>
-            </div>
-          </li>
 
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
-
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
-
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
-
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
-
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
-
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
-
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
-
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
-
           <li class="play-list-item">
             <div class="card-header">
-              <img src="https://picsum.photos/350/200" alt="" width="350">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
             </div>
             <div class="card-body">
               <img src="https://picsum.photos/30/30" alt="">
               <div class="info">
-                <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
               </div>
             </div>
           </li>
+          <li class="play-list-item">
+            <div class="card-header">
+              <img src="https://picsum.photos/350/200" alt="">
+              <div class="videolength">
+                <span>10:20</span>
+              </div>
+            </div>
+            <div class="card-body">
+              <img src="https://picsum.photos/30/30" alt="">
+              <div class="info">
+                <h3>Titolo del video YouTube</h3>
+                <a href="">Nome Canale</a>
+                <span>800.000 visualizzazioni</span>
+              </div>
+            </div>
+          </li>
+          
         </ul>
+      </div>
+
+      <div class="extra-news">
+
       </div>
     </section>
 
