Ho aggiunto al main la parte inferiore con le card relative ai video delle ultime news

--- a/index.html
+++ b/index.html
@@ -426,8 +426,103 @@
         </ul>
       </div>
 
-      <div class="extra-news">
+      <div class="extra">
 
+        <div class="extra-news">
+          <div class="extra-title">
+            <span>Notizie sul </span><span>covid-19</span>
+          </div>
+          <div class="extra-esc"> 
+            <a href=""><i class="fas fa-times"></i></a>
+          </div>
+        </div>
+
+        <div class="extra-playlist play-list-wrapper">
+          <ul class="play-list" >
+
+            <li class="play-list-item">
+              <div class="card-header">
+                <img src="https://picsum.photos/350/200" alt="">
+                <div class="videolength">
+                  <span>10:20</span>
+                </div>
+              </div>
+              <div class="card-body">
+                <img src="https://picsum.photos/30/30" alt="">
+                <div class="info">
+                  <h3>Titolo del video YouTube</h3>
+                  <a href="">Nome Canale</a>
+                  <span>800.000 visualizzazioni</span>
+                </div>
+              </div>
+            </li>
+            <li class="play-list-item">
+              <div class="card-header">
+                <img src="https://picsum.photos/350/200" alt="">
+                <div class="videolength">
+                  <span>10:20</span>
+                </div>
+              </div>
+              <div class="card-body">
+                <img src="https://picsum.photos/30/30" alt="">
+                <div class="info">
+                  <h3>Titolo del video YouTube</h3>
+                  <a href="">Nome Canale</a>
+                  <span>800.000 visualizzazioni</span>
+                </div>
+              </div>
+            </li>
+            <li class="play-list-item">
+              <div class="card-header">
+                <img src="https://picsum.photos/350/200" alt="">
+                <div class="videolength">
+                  <span>10:20</span>
+                </div>
+              </div>
+              <div class="card-body">
+                <img src="https://picsum.photos/30/30" alt="">
+                <div class="info">
+                  <h3>Titolo del video YouTube</h3>
+                  <a href="">Nome Canale</a>
+                  <span>800.000 visualizzazioni</span>
+                </div>
+              </div>
+            </li>
+            <li class="play-list-item">
+              <div class="card-header">
+                <img src="https://picsum.photos/350/200" alt="">
+                <div class="videolength">
+                  <span>10:20</span>
+                </div>
+              </div>
+              <div class="card-body">
+                <img src="https://picsum.photos/30/30" alt="">
+                <div class="info">
+                  <h3>Titolo del video YouTube</h3>
+                  <a href="">Nome Canale</a>
+                  <span>800.000 visualizzazioni</span>
+                </div>
+              </div>
+            </li>
+            <li class="play-list-item">
+              <div class="card-header">
+                <img src="https://picsum.photos/350/200" alt="">
+                <div class="videolength">
+                  <span>10:20</span>
+                </div>
+              </div>
+              <div class="card-body">
+                <img src="https://picsum.photos/30/30" alt="">
+                <div class="info">
+                  <h3>Titolo del video YouTube</h3>
+                  <a href="">Nome Canale</a>
+                  <span>800.000 visualizzazioni</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        
       </div>
     </section>
 
