--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
         </ul>
       </div>
 
+      <!-- Parte inferiore del main con le card dei video sulle ultime news e rispettivo titolo  -->
       <div class="extra">
 
         <div class="extra-news">
@@ -524,6 +525,7 @@
         </div>
         
       </div>
+      
     </section>
 
   </main>
